RESOLVED FIXED54046
Assertion failure !isInAcceleratedCompositingMode() in DrawingAreaProxyImpl::incorporateUpdate()
https://bugs.webkit.org/show_bug.cgi?id=54046
Summary Assertion failure !isInAcceleratedCompositingMode() in DrawingAreaProxyImpl::...
Anders Carlsson
Reported 2011-02-08 16:47:12 PST
Assertion failure !isInAcceleratedCompositingMode() in DrawingAreaProxyImpl::incorporateUpdate()
Attachments
Patch (9.33 KB, patch)
2011-02-08 16:56 PST, Anders Carlsson
bdakin: review+
Anders Carlsson
Comment 1 2011-02-08 16:56:49 PST
Anders Carlsson
Comment 2 2011-02-08 17:00:46 PST
WebKit Review Bot
Comment 3 2011-02-08 18:06:42 PST
http://trac.webkit.org/changeset/77996 might have broken GTK Linux 64-bit Debug
Note You need to log in before you can comment on or make changes to this bug.